--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/circle-cropped (2).png" alt="Ese's Profile Picture"></td>
+      <td><img src="IMAGES/circle-cropped (2).png" alt="Ese's Profile Picture"></td>
       <td>
         <h1>Ugbede Eseoghene Gracious</h1>
         <p> <em>Founder and CTO of <strong> <a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
