--- a/hobbies.html
+++ b/hobbies.html
@@ -12,9 +12,9 @@
     <li>Singing</li>
     <li>Baking
       <ul>
-        <li>Butter cakes</li>
-        <li>Puff-Puff</li>
-        <li><a href="https://www.allrecipes.com/recipe/7460/butter-cake/">Cakes</a></li>
+        <li>Sponge cakes</li>
+        <li>Spring Rolls</li>
+        <li><a href="https://www.allrecipes.com/recipe/7460/butter-cake/">Butter Cakes</a></li>
         <li>Meatpie</li>
         <li>Chin-Chin</li>
       </ul>
