--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <td>
         <h1>Ugbede Eseoghene Gracious</h1>
         <p> <em>Founder and CTO of <strong> <a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
-        <p>I am an Electrical/Instrument Technician in a major Oil and Gas Institution in the world.I am also a web developer, a hardworking lady and a strong team player. </p>
-        <p>I have an ear for good music, bake for fun,love crime novels,thrillers, rom-thrillers and adventure. One adventourous thing I'd love to try out, is skydiving. </p>
+        <p>I am an Electrical/Instrument Technician in a major Oil and Gas Institution in the world.I am a web developer, a hardworking lady and a strong team player. </p>
+        <p>I also have an ear for good music, bake for fun,love crime novels,thrillers, rom-thrillers and adventure. One adventourous thing I'd love to try out, is skydiving. </p>
       </td>
     </tr>
   </table>
